@@ -101,6 +101,9 @@ Core and builtins
 Library
 -------
 
+- Patch #1362975: Rework CodeContext indentation algorithm to
+  avoid hard-coding pixel widths.
+
 - Patch #1070046: Marshal new-style objects like InstanceType
   in xmlrpclib.
 
